HelloUltraviolet/Fixtures/RejectedSource/FFI/CapabilityIsolationDiagnosticOwnership/Expected.uv
//! Expected diagnostic metadata for the CapabilityIsolationDiagnosticOwnership rejected-source specimen.

expectedDiagnostic("E-TYP-2623", "diagnostics.23.CapabilityIsolationDiagnosticOwnership")
